--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -111,6 +111,7 @@ h2 {
     display: inline-block;
     margin: 0 0 30px 0; padding: 8px;
     border: solid currentColor; border-width: 3px;
+    font-weight: 700;
     @include border-radius(5px);
     
     &.red    {color: $bauhaus-red;}
