--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -11,25 +11,25 @@
 
         &.red {
             z-index: 1;
-            background-color: $bauhaus-red;
+            background-color: $red;
             @include transition(.4s);
         }
 
         &.blue {
             z-index: 2;
-            background-color: $bauhaus-blue;
+            background-color: $blue;
             @include transition(.4s .06s);
         }
 
         &.orange {
             z-index: 3;
-            background-color: $bauhaus-orange;
+            background-color: $orange;
             @include transition(.4s .11s);
         }
 
         &.green {
             z-index: 4;
-            background-color: $bauhaus-green;
+            background-color: $green;
             @include transition(.4s .15s);
         }
 
@@ -120,8 +120,15 @@
 
 #nav {
     position: fixed; top: 0; right: 0; z-index: 9001;
-    width: 100%; height: 71px;
-    background-color: white; border: solid #f2f2f2; border-width: 0 0 1px 0;
+    width: 100%; height: 76px;
+    background-color: white;
+    @include box-shadow(
+        inset 0 2px 0 $red,
+        0 1px 1px rgba(0,0,0,.03),
+        0 2px 2px rgba(0,0,0,.03),
+        0 4px 4px rgba(0,0,0,.03),
+        0 8px 8px rgba(0,0,0,.03)
+    );
     text-align: center;
     
     .bar {
@@ -166,10 +173,11 @@
             color: white; text-decoration: none; font-size: 28px; line-height: 1em; font-weight: 700;
             @include border-radius(4px);
             
-            &.a1 {background-color: $bauhaus-red;}
-            &.a2 {background-color: $bauhaus-blue;}
-            &.a3 {background-color: $bauhaus-green;}
-            &.a4 {background-color: $bauhaus-orange;}
+            &.a0 {display: none;}
+            &.a1 {background-color: $red;}
+            &.a2 {background-color: $blue;}
+            &.a3 {background-color: $green;}
+            &.a4 {background-color: $orange;}
         }
         
         @include on-desktop {
@@ -180,15 +188,30 @@
             
             a {
                 position: relative; z-index: 9999;
-                margin: 0 2px 0 0; padding: 13px 13px;
+                height: 46px; margin: 0 2px 0 0; padding: 13px 13px;
+                overflow: hidden;
                 font-size: 20px;
                 
-                &.a1.active, &.a1:hover {color: $bauhaus-red;}
-                &.a2.active, &.a2:hover {color: $bauhaus-blue;}
-                &.a3.active, &.a3:hover {color: $bauhaus-green;}
-                &.a4.active, &.a4:hover {color: $bauhaus-orange;}
+                &.a0 {
+                    display: inline-block;
+                    font-size: 0;
                 
-                &.a1, &.a2, &.a3, &.a4 {
+                    svg {
+                        width: 20px; height: 20px;
+                    }
+                    
+                    &.active, &:hover {
+                        polygon {
+                            fill: $red;
+                        }
+                    }
+                }
+                
+                &.a1.active, &.a1:hover {color: $blue;}
+                &.a2.active, &.a2:hover {color: $green;}
+                &.a3.active, &.a3:hover {color: $orange;}
+                
+                &.a1, &.a2, &.a3 {
                     background: none;
                     color: #676d86;
                 
@@ -200,12 +223,6 @@
                 }
             }
             
-            $a1-width: 84.36px;
-            $a2-width: 103.38px;
-            $a3-width: 150.18px;
-            $a4-width: 99.98px;
-            $a-margin-right: 2px;
-            
             .hover-bg {
                 display: none; position: absolute; top: 0; left: -100%; z-index: 1;
                 height: 46px;
@@ -214,37 +231,14 @@
                 @include transition(.2s);
             }
             
-            a.a1.active ~ .hover-bg {
-                border-color: $bauhaus-red;
-            }
-            
-            a.a2.active ~ .hover-bg {
-                border-color: $bauhaus-blue;
-            }
-            
-            a.a3.active ~ .hover-bg {
-                border-color: $bauhaus-green;
-            }
-            
-            a.a4.active ~ .hover-bg {
-                border-color: $bauhaus-orange;
-            }
-            
-            a.a1:hover ~ .hover-bg {
-                border-color: $bauhaus-red;
-            }
-            
-            a.a2:hover ~ .hover-bg {
-                border-color: $bauhaus-blue;
-            }
-            
-            a.a3:hover ~ .hover-bg {
-                border-color: $bauhaus-green;
-            }
-            
-            a.a4:hover ~ .hover-bg {
-                border-color: $bauhaus-orange;
-            }
+            a.a0.active ~ .hover-bg {border-color: $red;}
+            a.a1.active ~ .hover-bg {border-color: $blue;}
+            a.a2.active ~ .hover-bg {border-color: $green;}
+            a.a3.active ~ .hover-bg {border-color: $orange;}
+            a.a0:hover ~ .hover-bg {border-color: $red;}
+            a.a1:hover ~ .hover-bg {border-color: $blue;}
+            a.a2:hover ~ .hover-bg {border-color: $green;}
+            a.a3:hover ~ .hover-bg {border-color: $orange;}
         }
     }
     
@@ -252,7 +246,7 @@
 
 #language-btn {
     display: inline-block; position: relative; z-index: 9997;
-    width: 52px; height: 32px; margin: 4px 0;
+    width: 52px; height: 32px; margin: 7px 0;
 
     @include on-mobile {
         margin-right: 15px;
@@ -309,19 +303,19 @@
         
         &.i1 {
             top: 0; z-index: 2;
-            background-color: $bauhaus-red;
+            background-color: $red;
         }
         &.i2 {
             top: 12% + 16%;
-            background-color: $bauhaus-blue;
+            background-color: $blue;
         }
         &.i3 {
             top: (12% + 16%) * 2;
-            background-color: $bauhaus-orange;
+            background-color: $orange;
         }
         &.i4 {
             top: (12% + 16%) * 3; z-index: 3;
-            background-color: $bauhaus-green;
+            background-color: $green;
         }
     }
     
@@ -454,7 +448,7 @@
         content: '';
         display: block; position: absolute; top: 0; left: 0; z-index: 1;
         width: 100%; height: 100%;
-        background-color: $bauhaus-red;
+        background-color: $red;
         @include border-radius(4px);
         @include transition(.15s);
     }
