--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -29,6 +29,29 @@ section {
             height: 1em;
         }
     }
+    
+    &#about {
+        .greet {
+            @include animation(fade-in-from-top 1s .5s, hidden .5s);
+        }
+        .name {
+            @include animation(fade-in-from-top 1.2s 1s, hidden 1s);
+        }
+        .desc {
+            @include animation(fade-in-from-top 1.4s 1.5s, hidden 1.5s);
+        }
+    }
+    
+    .jsOn & {
+        
+        &#projects, &#technologies, &#contact {
+            @include animation(hidden 1s infinite);
+
+            &.appear {
+                 @include animation(fade-in-from-top 1s);
+            }
+        } 
+    }
 }
 
 
@@ -244,18 +267,12 @@ section {
             .desc {
                 position: absolute; top: 50%; left: 50%; z-index: 1;
                 width: 200px; height: 200px;
-                background: rgba(0,0,0,.7);
+                background: rgba(0,0,0,.85);
                 color: white; text-align: left;
                 @include opacity(0);
                 @include border-radius(5px);
-                @include transform(translate(-50%, -40%) scale(1.1));
-                @include transition(.3s);
-                
-                &:hover {
-                    z-index: 2;
-                    @include opacity(1);
-                    @include transform(translate(-50%,-50%));
-                }
+                @include transform(translate(-50%, -45%) scale(1.07));
+                @include transition(.1s);
                 
                 p {
                     position: absolute; top: 50%; left: 50%; z-index: 2;
@@ -274,6 +291,12 @@ section {
                         @include transition(.2s);
                     }
                 }
+            }
+            
+            &:hover .desc {
+                z-index: 2;
+                @include opacity(1);
+                @include transform(translate(-50%,-50%));
             }
             
             &:before {
