--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -289,6 +289,7 @@
     b {
         display: block; position: absolute; top: 0; left: 0;
         width: 100%; height: 100%;
+        @include transition(.4s);
     }
     
     &:active b {
@@ -298,7 +299,7 @@
     
     i {
         position: absolute; left: 0; z-index: 1;
-        width: 100%; height: 16%; // three 12% gaps between i's
+        width: 100%; height: 10%; // three 12% gaps between i's
         @include border-radius(3px);
         @include transition(all .2s, width .2s .2s, top .2s .2s, left .2s .2s);
         
@@ -321,6 +322,11 @@
     }
     
     &.nav-visible {
+        
+        b {
+            @include transform(rotateY(180deg));
+            @include transition(.3s .25s);
+        }
         
         i {
             top: 43.5%;
@@ -417,6 +423,10 @@
 #to-top {
     position: fixed; bottom: 15px; right: 15px; z-index: 9000;
     width: 48px; height: 48px;
+    
+    @include on-desktop {
+        display: none;
+    }
     
     b {
         display: block; position: absolute; top: 22%; left: 22%; z-index: 2;
