--- a/css/source/generic.scss
+++ b/css/source/generic.scss
@@ -93,7 +93,7 @@ html {
 
 body {
     position: relative;
-    min-height: 100%; margin: 0 auto; padding: 0 0 100px 0;
+    min-height: 100%; margin: 0 auto;
     overflow-x: hidden;
     font-size: 0;
 }
