--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -436,16 +436,15 @@
 
 
 #to-top {
-    position: fixed; bottom: 15px; right: 15px; z-index: 9000;
-    width: 48px; height: 48px;
-    
-    @include on-desktop {
-        display: none;
-    }
+    position: relative;
+    width: 100%; height: 120px; margin: 70px 0 0 0;
+    background-color: $red;
+    @include transition(.7s);
     
     b {
-        display: block; position: absolute; top: 22%; left: 22%; z-index: 2;
-        width: 56%; height: 56%;
+        display: block; position: absolute; top: 60%; left: 50%; z-index: 2;
+        width: 40px; height: 40px;
+        @include transform(translate(-50%,-50%));
         @include transition(.2s);
     }
     
@@ -469,36 +468,16 @@
         &.head2 {@include transform(rotate(45deg) translate(0,-8%));}
     }
     
-    // background
-    &:after {
-        content: '';
-        display: block; position: absolute; top: 0; left: 0; z-index: 1;
-        width: 100%; height: 100%;
-        background-color: $red;
-        @include border-radius(4px);
-        @include transition(.15s);
-    }
-    
     &:hover {
+        background-color: $blue;
         
         b {
-            top: 12%;
-        }
-        
-        &:after {
-            top: -12%;
+            top: 50%;
         }
         
         i {
             &.head1 {@include transform(rotate(-36deg) translate(0,-10%));}
             &.head2 {@include transform(rotate(36deg) translate(0,-10%));}
-        }
-    }
-    
-    &:active {
-        
-        b {
-            @include transform(scale(.8));
         }
     }
 }
