--- a/css/source/navigation.scss
+++ b/css/source/navigation.scss
@@ -55,11 +55,19 @@
                 @include transform(translate(-50%,-50%));
             }
         }
+        
+        @include ON_REDUCED_MOTION {
+            @include transition-property(none !important);
+        }
     }
 
     &.hidden {
         top: -110%;
         @include transition(all 0s .7s);
+        
+        @include ON_REDUCED_MOTION {
+            @include transition-property(none);
+        }
 
         > * {
             @include transform(translate(0, -100%));
@@ -132,6 +140,10 @@
     );
     @include animation(slide-in-from-top .5s .2s, hidden .2s);
     
+    @include ON_REDUCED_MOTION {
+        @include animation(none);
+    }
+    
     .bar {
         display: inline-block;
         max-width: $max-width; width: 100%; height: 100%; padding: 15px;
@@ -140,7 +152,7 @@
     
     // reset the hidden window styles on desktop nav,
     // so that the links of the navigation can be displayed
-    @include on-desktop {
+    @include ON_DESKTOP {
         
         .hidden-window {
             display: inline-block; position: relative; top: auto; float: left;
@@ -181,7 +193,7 @@
             &.a4 {background-color: $orange;}
         }
         
-        @include on-desktop {
+        @include ON_DESKTOP {
             
             br {
                 display: none;
@@ -229,6 +241,10 @@
                 height: 46px;
                 border: 2px solid white;
                 @include transition(.2s);
+    
+                @include ON_REDUCED_MOTION {
+                    @include transition(none);
+                }
             }
             
             a.a0.active ~ .hover-bg {
@@ -264,7 +280,7 @@
     display: inline-block; position: relative; z-index: 9997;
     width: 52px; height: 32px; margin: 7px 0;
 
-    @include on-mobile {
+    @include ON_MOBILE {
         margin-right: 15px;
     }
 
@@ -274,6 +290,10 @@
 
     &:active b {
         @include transform(scale(.9));
+        
+        @include ON_REDUCED_MOTION {
+            @include transform(none);
+        }
     }
     
     b {
@@ -295,16 +315,18 @@
     width: 40px; height: 40px;
     @include transition(.1s);
     
-    @include on-desktop{display: none;}
-    
-    &:hover {
-        @include opacity(.8);
+    @include ON_DESKTOP {
+        display: none;
     }
     
     b {
         display: block; position: absolute; top: 0; left: 0;
         width: 100%; height: 100%;
         @include transition(.4s);
+    
+        @include ON_REDUCED_MOTION {
+            @include transition-property(none !important);
+        }
     }
     
     &:active b {
@@ -317,6 +339,10 @@
         width: 100%; height: 10%; // three 12% gaps between i's
         @include border-radius(3px);
         @include transition(all .2s, width .2s .2s, top .2s .2s, left .2s .2s);
+    
+        @include ON_REDUCED_MOTION {
+            @include transition-property(none !important);
+        }
         
         &.i1 {
             top: 0; z-index: 2;
@@ -391,6 +417,10 @@
         @include text-wrap;
         @include border-radius(5px);
         @include transition(.2s);
+        
+        @include ON_REDUCED_MOTION {
+            @include transition-property(none);
+        }
 
         &.current {
             background: #f8f8f8; cursor: auto;
@@ -413,7 +443,7 @@
         &.de:before {@extend %flag-germany;}
     }
         
-    @include on-phone {
+    @include ON_PHONE {
         
         .center {
             max-width: 290px;
@@ -442,7 +472,7 @@
     @include transition(.2s);
     
     b {
-        display: block; position: absolute; top: 60%; left: 50%; z-index: 2;
+        display: block; position: absolute; top: 50%; left: 50%; z-index: 2;
         width: 40px; height: 40px;
         @include transform(translate(-50%,-50%));
         @include transition(.2s);
@@ -469,8 +499,6 @@
     }
     
     &:hover {
-        background-color: $blue;
-        @include transition(.85s);
         
         b {
             top: 50%;
