--- a/css/source/sections.scss
+++ b/css/source/sections.scss
@@ -25,7 +25,7 @@ section {
             font-size: 150px;
         }
 
-        @include on-phone {
+        @include ON_PHONE {
             height: 1em; margin: 30px 0 10px 0;
         }
     }
@@ -40,6 +40,7 @@ section {
         .desc {
             @include animation(fade-in-from-top 1.4s 1.5s, hidden 1.5s);
         }
+        
     }
     
     #scroll-indicator {
@@ -48,13 +49,25 @@ section {
     
     .jsOn & {
         
-        &#projects, &#technologies, &#contact {
+        &#projects, 
+        &#technologies, 
+        &#contact {
             @include animation(hidden 1s infinite);
 
             &.appear {
                  @include animation(fade-in-from-top 1s);
             }
         } 
+    }
+        
+    @include ON_REDUCED_MOTION {
+        &#about *,
+        #scroll-indicator,
+        &#projects, 
+        &#technologies, 
+        &#contact {
+            @include animation(none !important);
+        }
     }
 }
 
@@ -127,6 +140,10 @@ section {
         background: $gray;
         @include border-radius(50%);
         @include animation(animate-scroll-indicator 3s infinite);
+        
+        @include ON_REDUCED_MOTION {
+            @include animation(none);
+        }
     }
 }
 
@@ -177,7 +194,7 @@ section {
     @media (max-width: 650px) {
         width: 100%; margin: 1% 0; padding: 0 0 60% 0;
     }
-    @include on-phone {
+    @include ON_PHONE {
         padding: 0 0 80% 0;
     }
     
@@ -197,6 +214,10 @@ section {
         @include transform(scale(1.2));
         @include transition(.3s .12s);
         
+        @include ON_REDUCED_MOTION {
+            @include transition-property(none !important);
+        }
+        
         &:before {
             content: '';
             position: absolute; top: 0; left: 0; z-index: -1;
@@ -210,7 +231,7 @@ section {
             width: 100%; padding: 34px;
             @include transform(translate(0, -50%));
             
-            @include on-desktop {
+            @include ON_DESKTOP {
                 padding: 60px;
             }
             
@@ -297,7 +318,7 @@ section {
             width: 25%; padding: 40px 0;
             text-align: center;
             
-            @include on-mobile {
+            @include ON_MOBILE {
                 width: 50%;
             }
             
@@ -315,6 +336,10 @@ section {
                 @include border-radius(5px);
                 @include transform(translate(-50%, -45%) scale(1.07));
                 @include transition(.1s);
+        
+                @include ON_REDUCED_MOTION {
+                    @include transition-property(none !important);
+                }
                 
                 p {
                     position: absolute; top: 50%; left: 50%; z-index: 2;
@@ -349,7 +374,7 @@ section {
                 @include background-size(100% 100%);
             }
             
-            @include on-phone {
+            @include ON_PHONE {
                 padding: 20px 0;
                 
                 > span {
@@ -414,7 +439,7 @@ section {
             font-size: 52px;
         }
         
-        @include on-phone {
+        @include ON_PHONE {
             margin: 20px 0 0 0;
             font-size: 18px; line-height: 1.25em;
         }
@@ -436,7 +461,7 @@ section {
             font-size: 40px;
         }
         
-        @include on-phone {
+        @include ON_PHONE {
             font-size: 18px;
         }
         
@@ -449,9 +474,6 @@ section {
             display: inline-block;
             margin: 0 0 0 10px;
             @include transition(.2s);
-        }
-        &:hover:after {
-            @include transform(translate(.15em,0));
         }
     }
 }
